--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src/index.ts --no-splitting --minify",
+    "build": "npx -y tsup src/index.ts --no-splitting --minify",
     "prepare": "npm run build"
   },
   "keywords": [],
@@ -22,7 +22,6 @@
     "@types/eslint": "^7.28.0",
     "@types/estree": "^0.0.50",
     "@types/node": "^16.9.6",
-    "tsup": "^5.2.0",
     "typescript": "^4.4.3"
   }
 }
