--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist/**"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx -y ts-node tests/index.ts",
     "build": "npx -y tsup src/index.ts --no-splitting --minify",
     "prepare": "npm run build"
   },
@@ -22,6 +22,15 @@
     "@types/eslint": "^7.28.0",
     "@types/estree": "^0.0.50",
     "@types/node": "^16.9.6",
+    "typescript": "^4.4.3",
+    "@typescript-eslint/parser": "^4.31.2",
+    "ts-node": "^10.2.1"
+  },
+  "dependencies": {
+    "@typescript-eslint/experimental-utils": "^4.31.2",
+    "eslint-etc": "^4.2.5"
+  },
+  "peerDependencies": {
     "typescript": "^4.4.3"
   }
 }
