--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@types/eslint": "^7.28.0",
     "@types/estree": "^0.0.50",
     "@types/node": "^16.9.6",
-    "typescript": "^4.4.3",
     "@typescript-eslint/parser": "^4.31.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^4.31.2",
