--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/eslint": "^8.21.1",
+    "@types/eslint": "^8.37.0",
     "@types/estree": "^1.0.0",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/parser": "^5.57.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.3"
   },
   "dependencies": {
-    "@typescript-eslint/experimental-utils": "^5.52.0",
-    "eslint-etc": "^5.2.0"
+    "@typescript-eslint/utils": "^5.57.0",
+    "eslint-etc": "^5.2.1"
   },
   "peerDependencies": {
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3 || ^5.0.0"
   }
 }
